Fixed spacing between at name and tag

--- a/mediumscreen.css
+++ b/mediumscreen.css
@@ -259,7 +259,7 @@
 
 .at-name {
     font-weight: bold;
-    margin-bottom: 2px;
+    margin-bottom: 5px;
 }
 
 .profile-tag {
